# arxiv-mcp-server

./: .gitignore  .npmignore  LICENSE  NOUGAT_STATUS.md  README.md  TESTING_GUIDE.md  claude_desktop_config.json.example  package.json  pyproject.toml  run-server.sh  server.py  test_paper_for_claude.md
mains/: check_dependencies.py  claude_optimized_extraction.py  demo_pattern_detection.py  server.py  setup_nougat.py
plans/: roadmap.md
src/arxiv_mcp_server/: __init__.py  server.py  server_wrapper.py
src/arxiv_mcp_server/analysis/: __init__.py  paper_analysis.py
src/arxiv_mcp_server/api/: __init__.py  arxiv_client.py
src/arxiv_mcp_server/citations/: __init__.py  citation_manager.py  reference_extractor.py  semantic_scholar.py
src/arxiv_mcp_server/extraction/: __init__.py  nougat_docker.py  paper_reader.py  smart_extractor.py
src/arxiv_mcp_server/storage/: __init__.py  paper_library.py  storage_manager.py
src/arxiv_mcp_server/utils/: __init__.py  citation_utils.py  name_utils.py
tests/: test_arxiv_client.py  test_name_utils.py  test_server.py  test_smart_extractor.py
