[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Rubén Fernández Fuertes",email = "fernandezfuertesruben@gmail.com"}
]
packages = [
    {include = "arxiv_mcp_server", from = "src"}
]

readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "nougat-ocr[api]>=0.1.17",
    "grobid-client-python>=0.0.7",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
arxiv-mcp-server = "server:run"
test-extraction = "mains.test_extraction_direct:main"
check-deps = "mains.check_dependencies:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
ruff = "^0.6.0"
